# aiidalab-empa-setup

./: README.md  Testing.ipynb  config.yml  export.yml  metadata.json  requirements.txt  setup.cfg  setup.yml  start.py
Notebooks/: TestCodes.ipynb  TestUenvs.ipynb
utils/: OKconfig.py  aiida_and_ssh_utils.py  config.py  control.py  repo_utils.py  string_utils.py
