[metadata]
name = aiidalab_config_app
version = v2025.0214
description = Configuration app for AiiDAlab.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nanotech-empa/aiidalab-empa-setup
author = The AiiDAlab Team
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    aiidalab>=21.09.0
    humanize
    ipywidgets
python_requires = >=3.8

[options.extras_require]
dev =
    bumpver~=2023.1124
    pre-commit~=2.20

[aiidalab]
title = AiiDAlab Config App
description = Setup configuration for AiiDAlab and CSCS access.
categories =
    setup

[flake8]
ignore =
    E501
    W503
    E203

[bumpver]
current_version = "v2025.0214"
version_pattern = "vYYYY.BUILD[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
start.py =
    __version__ = "{version}"
setup.cfg =
    current_version = "{version}"
    version = {version}
